#
#
AC_INIT([Kute],[0.3.0],[XXX],[Kute])

AC_CONFIG_HEADER([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_HEADER_STDC

ID3TAG_MODULES="id3tag >= 0.15.0"
PKG_CHECK_MODULES(ID3TAG,$ID3TAG_MODULES)
AC_SUBST(ID3TAG_CFLAGS)
AC_SUBST(ID3TAG_LIBS)

MP4_LIBS="-lmp4v2"
MP4_CFLAGS="-I/usr/include"
AC_SUBST(MP4_CFLAGS)
AC_SUBST(MP4_LIBS)

TAGLIB_MODULES="taglib >= 1.11.1"
PKG_CHECK_MODULES(TAGLIB,$TAGLIB_MODULES)
AC_SUBST(TAGLIB_CFLAGS)
AC_SUBST(TAGLIB_LIBS)

FLAC_MODULES="flac >= 0.0.0"
PKG_CHECK_MODULES(FLAC,$FLAC_MODULES)
AC_SUBST(FLAC_CFLAGS)
AC_SUBST(FLAC_LIBS)

AC_OUTPUT(Makefile Kute/app/Makefile)

