
AUTOMAKE_OPTIONS=subdir-objects

include ../flagsandlibs
include ../sources

kute_SOURCES=COMMONSRC = ../src/flactags.cpp ../src/globals.cpp ../src/main.cpp ../src/mp3tags.cpp ../src/mp4tags.cpp

kute_CFLAGS=-O3

mp3title_SOURCES = ../src/mp3title.cpp
mp3album_SOURCES = ../src/mp3album.cpp
mp3artist_SOURCES = ../src/mp3artist.cpp

bin_PROGRAMS=kute mp3title mp3album mp3artist


